[package]
name = "model-checking"
version = "0.1.1"
authors = ["Taylor Coffman <CoffmanTaylor96+git@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
rand = "0.8.3"
bloom-filter = {path = "../bloom-filter"}
chaining-iter = {path = "../chaining-iter"}
hi-bag = {path = "../hi-bag"}